--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div>
         <p>Menu</p>
         <ul class="side-ul">
-          <li class="side-nav-item"><a class="active" href="#Home">Home</a></li>
+          <li class="side-nav-item"><a href="#home">Home</a></li>
           <li class="side-nav-item"><a href="#about">About</a></li>
           <li class="side-nav-item"><a href="#whatido">What i do</a></li>
           <li class="side-nav-item"><a href="#projects">Projects</a></li>
