--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <div class="textbox">
           <h2>About me</h2>
           <h4>I’m a 23 years old boy from Argentina. Student of
-          industrial design in <a href="#">National University of Córdoba.</a>
-          Also i’m a self-taught Web Designer/Developer.
-          Consider my self an multidisciplinary designer,
-          i love create and learn new thing all the time.</h4>
+          <u>Industrial Design</u> in <a href="#">National University of Córdoba.</a>
+          Also i’m a self-taught <u>Front-end Web Developer</u>.
+          Consider myself an multi-disciplinary designer, who
+          loves create and learn new thing all the time.</h4>
           <a href="#contact" class="btn"><i class="fa fa-envelope" aria-hidden="true"></i>  Contact Me</a>
           <a href="https://www.linkedin.com/in/jcruzbudin/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
           <a href="https://twitter.com/juancruzbud" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
@@ -149,7 +149,7 @@
         <div class="contact-textbox">
           <div class="textbox">
             <h2>Get in touch</h2>
-            <h4>I'm always looking forward to new opportunities,</br>
+            <h4>I'm always looking forward to new opportunities,
               ping me if you got any.</h4>
             <div class="icon-box"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></div><a href="mailto:hello@juanbud.com">hello@juanbud.com</a></br>
             <div class="icon-box"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></div><a href="#">+11 358 6 023 603</a></br>
