--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="welcome-box">
           <h1><span class="h1-bold">Hi there.</span></br>I'm Juan Cruz.</br>Industrial design &amp</br>Web development.</h1>
-          <p id="p-studient">(student)</p>
+          <p class="p-student">(student)</p>
         </div>
         <div class="mouse-wrapper"  data-tooltip="scroll down">
             <div class="mouse-scroll"></div>
@@ -82,8 +82,8 @@
         <div class="textbox">
           <h2>About me</h2>
           <h4>I’m a 23 years old boy from Argentina. Student of
-          <u>Industrial Design</u> in <a href="#">National University of Córdoba.</a>
-          Also i’m a self-taught <u>Front-end Web Developer</u>.
+          <span>Industrial De sign</span> in <a href="#">National University of Córdoba.</a>
+          Also i’m a self-taught <span>Front-end Web Developer</span>.
           Consider myself an multi-disciplinary designer, who
           loves create and learn new thing all the time.</h4>
           <a href="#contact" class="btn"><i class="fa fa-envelope" aria-hidden="true"></i>  Contact Me</a>
