--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li class="indice-item"><span data-tooltip="contact"></span><a href="#contact"></a></li>
     </ul>
 
-    <div id="mySidenav" class="side-nav">
+    <div id="side-nav">
       <div>
         <p>Menu</p>
         <ul class="side-ul">
@@ -52,7 +52,7 @@
       </div>
     </div>
     <header>
-      <div onclick="openNav()" class="hamburger-menu">
+      <div class="hamburger-menu">
          <div class="bar"></div>
       </div>
     </header>
@@ -82,7 +82,7 @@
         <div class="textbox">
           <h2>About me</h2>
           <h4>I’m a 23 years old boy from Argentina. Student of
-          <span>Industrial De sign</span> in <a href="#">National University of Córdoba.</a>
+          <span>Industrial Design</span> in <a href="#">National University of Córdoba.</a>
           Also i’m a self-taught <span>Front-end Web Developer</span>.
           Consider myself an multi-disciplinary designer, who
           loves create and learn new thing all the time.</h4>
@@ -151,9 +151,9 @@
             <h2>Get in touch</h2>
             <h4>I'm always looking forward to new opportunities,
               ping me if you got any.</h4>
-            <div class="icon-box"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></div><a href="mailto:hello@juanbud.com">hello@juanbud.com</a></br>
-            <div class="icon-box"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></div><a href="#">+11 358 6 023 603</a></br>
-            <div class="icon-box"><i class="fa fa-map-marker fa-2x" aria-hidden="true"></i></div><a href="#">San Lorenzo 427, Neva Cba. </a>
+            <div class="icon-box"><i class="fa fa-envelope fa-1mx" aria-hidden="true"></i></div><a href="mailto:hello@juanbud.com">hello@juanbud.com</a></br>
+            <div class="icon-box"><i class="fa fa-phone fa-1mx" aria-hidden="true"></i></div><a href="#">+11 358 6 023 603</a></br>
+            <div class="icon-box"><i class="fa fa-map-marker fa-1mx" aria-hidden="true"></i></div><a href="#">San Lorenzo 427, Córdoba </a>
           </div>
         </div>
       </div>
