--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <ul class="indice">
-      <li class="indice-item"><span data-tooltip="home">01</span><a class="active-bullet" href="#home"></a></li>
+      <li class="indice-item"><a data-tooltip="home" class="active-bullet" href="#home"></a></li>
       <li class="indice-item"><span data-tooltip="about"></span><a href="#about"></a></li>
       <li class="indice-item"><span data-tooltip="what i do"></span><a href="#whatido"></a></li>
       <li class="indice-item"><span data-tooltip="projects"></span><a href="#projects"></a></li>
@@ -78,7 +78,7 @@
           <h2>About me</h2>
           <h4>I’m a 23 years old boy from Argentina. Student of
           <span>Industrial Design</span> in <a href="#">National University of Córdoba.</a>
-          Also i’m a self-taught <span>Front-end Web Developer</span>.
+          Also i’m a self-taught <span> Web Designer/Developer</span>.
           Consider myself an multi-disciplinary designer, who
           loves create and learn new thing all the time.</h4>
           <a href="#contact" class="btn"><i class="fa fa-envelope" aria-hidden="true"></i>  Contact Me</a>
@@ -138,9 +138,7 @@
     </div>
     <div id="contact">
       <div class="contact-box">
-        <div id="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3213.5016722183655!2d-64.18156839597451!3d-31.425520202178333!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1497986260349"  frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
+        <div id="map"></div>
         <div class="contact-textbox">
           <div class="textbox">
             <h2>Get in touch</h2>
@@ -148,7 +146,7 @@
               ping me if you got any.</h4>
             <div class="icon-box"><i class="fa fa-envelope fa-1mx" aria-hidden="true"></i></div><a href="mailto:hello@juanbud.com">hello@juanbud.com</a></br>
             <div class="icon-box"><i class="fa fa-phone fa-1mx" aria-hidden="true"></i></div><a href="#">+11 358 6 023 603</a></br>
-            <div class="icon-box"><i class="fa fa-map-marker fa-1mx" aria-hidden="true"></i></div><a href="#">San Lorenzo 427, Córdoba </a>
+            <div class="icon-box"><i class="fa fa-map-marker fa-1mx" aria-hidden="true"></i></div><a href="#">Nueva Cordoba, Córdoba </a>
           </div>
         </div>
       </div>
