--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h2>About me</h2>
           <h4>I’m a 23 years old boy from Argentina. Student of
           <span>Industrial Design</span> in <a href="#">National University of Córdoba.</a>
-          Also i’m a self-taught <span> Web Designer/Developer</span>.
+          Also i’m a self-taught <span> UX Designer &amp Developer</span>.
           Consider myself an multi-disciplinary designer, who
           loves create and learn new thing all the time.</h4>
           <a href="#contact" class="btn"><i class="fa fa-envelope" aria-hidden="true"></i>  Contact Me</a>
@@ -100,7 +100,7 @@
         </div>
         <div class="skill-box">
           <div class="skill"></div>
-          <h3>UI/UX Design</h3>
+          <h3>UX Design</h3>
           <p>Lorem ipsum dolor sit amet inore, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
         </div>
         <div class="skill-box">
@@ -146,11 +146,10 @@
               ping me if you got any.</h4>
             <div class="icon-box"><i class="fa fa-envelope fa-1mx" aria-hidden="true"></i></div><a href="mailto:hello@juanbud.com">hello@juanbud.com</a></br>
             <div class="icon-box"><i class="fa fa-phone fa-1mx" aria-hidden="true"></i></div><a href="#">+11 358 6 023 603</a></br>
-            <div class="icon-box"><i class="fa fa-map-marker fa-1mx" aria-hidden="true"></i></div><a href="#">Nueva Cordoba, Córdoba </a>
+            <div class="icon-box"><i class="fa fa-map-marker fa-1mx" aria-hidden="true"></i></div><a href="#">Nueva Córdoba, Córdoba </a>
           </div>
         </div>
       </div>
-
       <!-- <div class="contenedor contact-box">
         <h2>Get in touch</h2>
         <h4>I'm always looking forward to new opportunities,</br>
@@ -175,8 +174,7 @@
         <a id="scroll-to-top-btn" href="#home"><i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i></a>
       </footer>
     </div>
-
-    <!-- Primero Jquery, despues JavaScript  -->
+    <!-- Primero Jquery, despues ScrollReveal, por ultimo JavaScript  -->
     <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
