--- a/index.html
+++ b/index.html
@@ -64,9 +64,15 @@
           </ul>
         </div>
         <div class="welcome-box">
+          <h4>Hi there</h4>
+          <h1><span class="h1-bold">I'm Juan Cruz,</br>Designer &amp Creative</br>based in Córdoba.</span></h1>
+        </div>
+
+        <!-- <div class="welcome-box">
           <h1><span class="h1-bold">Hi there.</span></br>I'm Juan Cruz.</br>Industrial design &amp</br>Web development.</h1>
           <p class="p-student">(student)</p>
         </div>
+         -->
         <div class="mouse-wrapper"  data-tooltip="scroll down">
             <div class="mouse-scroll"></div>
         </div>
