--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           </ul>
         </div>
         <div class="welcome-box">
-          <h4>Hi there</h4>
-          <h1><span class="h1-bold">I'm Juan Cruz,</br>Designer &amp Creative</br>based in Córdoba.</span></h1>
+          <h4 class="hello">Hi there</h4>
+          <h1><span class="h1-bold">I'm <span class="name">Juan Cruz</span>,</br>Designer &amp Creative</br>based in Córdoba.</span></h1>
         </div>
 
         <!-- <div class="welcome-box">
