--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           Also i’m a self-taught <span> UX Designer &amp Developer</span>.
           Consider myself an multi-disciplinary designer, who
           loves create and learn new thing all the time.</h4>
-          <a href="#contact" class="btn"><i class="fa fa-envelope" aria-hidden="true"></i>  Contact Me</a>
+          <a href="mailto:hello@juanbud.com" class="btn"><i class="fa fa-envelope" aria-hidden="true"></i>  Contact Me</a>
           <a href="https://www.linkedin.com/in/jcruzbudin/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
           <a href="https://twitter.com/juancruzbud" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
         </div>
@@ -167,12 +167,12 @@
         </div>
       </div> -->
       <div id="social">
-        <a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-dribbble fa-2x" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-behance fa-2x" aria-hidden="true"></i>
+        <a href="https://" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/juancruzbud" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/jcruzbudin/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+        <a href="https://" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+        <a href="https://dribbble.com/juancruzbud" target="_blank"><i class="fa fa-dribbble fa-2x" aria-hidden="true"></i></a>
+        <a href="https://www.behance.net/Juancb" target="_blank"><i class="fa fa-behance fa-2x" aria-hidden="true"></i>
         </a>
       </div>
       <footer>
