--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
     </div>
     <div id="whatido" class="contenedor">
       <h2>What i do</h2>
-      <h4>Consider my self an multidisciplinary designer,</br>
-      i love create and learn new thing all the time.</h4>
+      <h4>Lorem ipsum dolor sit amet inore</h4>
       <div class="skill-big-box">
         <div class="skill-box">
           <div class="skill"></div>
@@ -118,7 +117,7 @@
     </div>
     <div id="projects" class="contenedor">
       <h2>Projects</h2>
-      <h4>Consider my self an multidisciplinary designer,</br>i love create and learn new thing all the time.</h4>
+      <h4>Lorem ipsum dolor sit amet inore</h4>
       <div class="project">
         <div class="project-img-box"></div>
         <div class="project-info-box">
